fix workspace-edit-mode-overlay z-index

--- a/dashboard/src/app/workspaces/workspace-edit-mode/workspace-edit-mode-overlay.styl
+++ b/dashboard/src/app/workspaces/workspace-edit-mode/workspace-edit-mode-overlay.styl
@@ -3,7 +3,6 @@
   bottom 0
   left 0
   right 0
-  z-index 100
   background-color lighten($mouse-gray-color, 10%)
   height 50px
   border-top 1px solid $very-light-grey-color
